utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/ConfigurationOrder.ide
package valid

typedef configuration ConfigurationOrder {
    label "Some Configuration"

    configuration sub: ConfigurationOrderComponent<-1> {

    }

    frontend task main
}
