utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/ConfigurationOrder.ide
package invalid

typedef configuration ConfigurationOrder {
    label "Some Configuration"

    configuration sub: ConfigurationOrderComponent {

    }

    frontend task main
}
